# dl-ml-library

./: README.md  pyproject.toml
dl_ml_library/abstract/: __init__.py  data.py  dataset.py  model.py  preprocessor.py
dl_ml_library/common/: data.py  metrics.py
dl_ml_library/datasets/uci/: __init__.py  iris.py
dl_ml_library/models/ml/: svm.py
dl_ml_library/preprocessors/: scalers.py
examples/: iris.py
