[tool.poetry]
name = "dl-ml-library"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cu118", source = "pytorch-cuda_11.8"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch-cuda_11.8"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch-cuda_11.8"}
scikit-learn-intelex = "^2023.2.1"
intel-extension-for-pytorch = {version = "^2.0.100+cpu", source = "ipex-cpu"}
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "pytorch-cuda_11.8"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "ipex-cpu"
url = "https://developer.intel.com/ipex-whl-stable-cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
